Changed some comments to sass only

--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,17 +1,17 @@
-/* ===Color Variables== */
+//Color Variables
 $main-brand-color: #58e1c1;
 $secondary-brand-color: #51ddfc;
 $white: #fff;
 $typography-font-color: #777;
 
 
-/* ===Font-Family Variables== */
+//Font-Family Variables
 $main-font: 'Lato', sans-serif;
 
 
 
 
-/* ===Maps== */
+//Maps
 
 $flex-basis:(
     'col-1': 8.33%,
